--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -3,13 +3,14 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 0px 5px;
-    .add-item {
+    .add-item,
+    form {
         grid-column: 1/2;
         // background-color: rebeccapurple;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        height: 300px;
+        height: 20rem;
         .label-form {
             margin: 0.4rem 0px;
             border-radius: 15px;
@@ -35,5 +36,5 @@
     border-radius: 5px;
     padding: 5px;
     color: #FFFCDC;
-    pointer-events: none;
+    // pointer-events: none;
 }
