--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -27,7 +27,7 @@
                 .name {
                     font-weight: 600;
                     font-size: 1rem;
-                    color: #EDD2F3;
+                    color: #5F7161;
                 }
             }
         }
@@ -38,9 +38,10 @@
             .item-details {
                 grid-column: 1/2;
                 display: flex;
+                flex-direction: column;
                 flex-wrap: wrap;
                 justify-content: start;
-                align-items: center;
+                // align-items: center;
             }
             .difficulty {
                 grid-column: 2/3;
